--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strive-roob-backend",
+  "name": "larissa-backend",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -18,6 +18,8 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.3",
+    "sequelize": "^6.17.0"
   }
 }
