--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon -r dotenv/config src/server.js",
-    "start": "pm2 start src/server.js"
+    "start": "pm2 start app.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
