--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
+    "mysql2": "^2.3.3",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
