--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-github-webhook": "^1.0.6",
     "express-list-endpoints": "^6.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
