--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "express-github-webhook": "^1.0.6",
     "express-list-endpoints": "^6.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -24,5 +23,8 @@
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "sequelize": "^6.17.0"
+  },
+  "devDependencies": {
+    "@inventivetalent/express-github-webhook": "^1.0.3"
   }
 }
